--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Bedside Clock</title>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="interactive-widget=resizes-content">
+    <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
     <script type="text/javascript" src="clock.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="manifest" href="manifest.webmanifest">
